# Trakor

./: .cproject  .gitignore  .project  CMakeLists.txt  trakor.cfg
include/: ConLogger.cpp  ConLogger.h  LogLevel.h  Logger.h
lib/mysql-connector-c++-8.0.24-linux-glibc2.12-x86-64bit/: INFO_BIN
lib/mysql-connector-c++-8.0.24-linux-glibc2.12-x86-64bit/lib64/: libmysqlcppconn.so.9  libmysqlcppconn8.so.2  libmysqlcppconn8.so.2.8.0.24
src/: CMakeLists.txt  Main.cpp  Trakor.cpp
src/Configuration/: CMakeLists.txt  Configuration.cpp  Configuration.h
src/Controller/: CMakeLists.txt  SearchController.cpp  SearchController.h
src/Database/: CMakeLists.txt  Connection.cpp  Connection.h
src/Http/: CMakeLists.txt  Routes.cpp  Routes.h
src/Trakor/: CMakeLists.txt  Peer.cpp  Seeder.h
